# NoisySimul

./: CMakeLists.txt  Readme.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
include/: Color.hpp  GameObject.hpp  Renderable.hpp  Style.hpp  Transform.hpp  Updatable.hpp  Window.hpp
src/: Color.cpp  GameObject.cpp  Window.cpp  main.cpp
